--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <main id="home">
     <h1 class="lg-heading">
-      Cornelis de <span class="text-primary">Witte</span>
+      Cornelis de Witte
     </h1>
     <h2 class="sm-heading">
       <span class="text-primary">Student</span>; MBO Applicatie- en mediaontwikkelaar, 3<sup>e</sup> jaar
